--- a/NEWS
+++ b/NEWS
@@ -7,9 +7,10 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 - The command `ansys-send-to-ansys' (C-c C-c) grabs now the current
   paragraph, when there is no region marked.
 
-- The command `ansys-send-to-ansy-and-proceed' is now interactive,
-  i. e. after invoking this command with its key-sequence (C-c C-j) it
-  can be repeated by typing just the final character (j) ....
+- The command `ansys-send-to-ansy-and-proceed' (C-c C-j) is now
+  interactive, i. e. after invoking this command with its key-sequence
+  "C-c C-j" it can be repeated by typing just the final character "j"
+  (or "C-j").
 
 - The `ansys-show-command-parameters' (M-?) tooltip can now be
   switched immediately off with a prefix argument of zero.
