--- a/TODO
+++ b/TODO
@@ -55,6 +55,7 @@
    - file mode specification error: (search-failed
      "nblock\\|eblock\\|cmblock" when opening .dat
    - mismatch in customisation buffer of -license-file and -ansysli-servers
+   - C-c C-a does not take signs (e.g. +13, -8) befor numbers into account
    - C-c C-a does not align a pragraph if the mark was not set (first
       time file visit)!!!!!
    - variables behind / and * are not highlighted! try changing the
@@ -70,18 +71,17 @@
         *cfclos
 	 M-? shows help for *mwrite, when cursor behind *cfclos
    - /sys,evince press-fit.pdf  triggers a "search failed"
-   - makefile errors: Check tutorials
-   - makefile errors when doing -fontification.el
-   - ansys-template.el:85:13:Warning: reference to free variable
-     `ansys-skeleton-overlay'
-   - mouse-choose-completion is obsolete since E23.2
 ** Release June
    - Correct the creep data with total strain to creep strain!
    - automatised PDFs
    - makefile fontification of _tutorial PDFs is not working,
      necessary to load them by hand before exporting
+   - makefile errors: Check tutorials
+   - makefile errors when doing -fontification.el
+   - ansys-template.el:85:13:Warning: reference to free variable
+     `ansys-skeleton-overlay'
+   - mouse-choose-completion is obsolete since E23.2
 ** Wish-list
-   - example.anf?
    - check *vwrite with gui mode and interactive mode (graphics window?)
    - add element numbers to the general completion list, yes or not?
    - WikEmacs, Melpa, GNU ELPA and/or marmalade, ANSYS-Mode debian
