--- a/TODO
+++ b/TODO
@@ -37,31 +37,26 @@
 
 * 16.1.2:
 ** Wish-list
-   - Rename fontification.mac -> example.mac & make it functional
-   - implement -hide-region also for rotated nodes in WB .dat files
-     (frictionless support)
    - -show-command-parameters indicating at which parameter position
      the cursor is active (update tutorials)
-   - Display shortened key(s) for C-c C-j
+   - Display hints for the shortened key(s) for C-c C-j
    - Indicate visually the region which was copied or send for
      func. -send-to-ansys
+   - Rename fontification.mac -> example.mac & make it solver compatible
    - GH-pages with tutorials
    - GH-wiki pages
 * 16.1.1:
-** TODO Freeze Mai
-   - update -keywords.el
-   - create v16 branch
 ** Bugs
    - file mode specification error: (search-failed
      "nblock\\|eblock\\|cmblock" when opening .dat
    - path construction in -mode.el for help program is not working, if
      ansys-mode is not activated! <- autoloaded functions
    - mismatch in customisation buffer of -license-file and -ansysli-servers
-   - C-c C-a does not take signs (e.g. +13, -8) befor numbers into account
    - C-c C-a does not align a pragraph if the mark was not set (first
       time file visit)!!!!!
-   - variables behind / and * are not highlighted! try changing the
-     character syntax???
+   - C-c C-a does not take signs (e.g. +13, -8) befor numbers into account
+   - variables behind / and * without whitespace in between are not
+     highlighted! try changing the character syntax???
    - *create file tmp,mac: macro call: tmp, is not highlighted
    - *msg command's format string is not higlighted (-template-element-table)
    - variables are not highlighted in -skeletons?
@@ -69,7 +64,7 @@
         *mwrite
         *cfclos
 	 M-? shows help for *mwrite, when cursor behind *cfclos
-   - /sys,evince press-fit.pdf  triggers a "search failed"
+   - -skeleton-information returns: file-name-extension: Wrong type argument: stringp, nil
 ** Release June
    - Correct the creep data with total strain to creep strain!
    - automatised PDFs
@@ -81,8 +76,10 @@
      `ansys-skeleton-overlay'
    - mouse-choose-completion is obsolete since E23.2
 ** Wish-list
+   - implement -hide-region also for rotated nodes in WB .dat files
+     (frictionless support)
    - check *vwrite with gui mode and interactive mode (graphics window?)
-   - add element numbers to the general completion list, yes or not?
+   - add element numbers to the general completion list, yes or no?
    - WikEmacs, Melpa, GNU ELPA and/or marmalade, ANSYS-Mode debian
      .deb package
    - HTML APDL documentation
@@ -183,19 +180,18 @@
     download, documentation page
   - publication emails (with tutorial and news):
 
-
     The project is hosted on
 
     https://github.com/dieter-wilhelm/ansys-mode
 
     Where you can find also the latest development version.
 
-    Stable versions and prebuild packages are to be found in the
+    Stable versions and prebuild packages are to be found on the
     releases page:
 
-     https://github.com/dieter-wilhelm/ansys-mode/releases
+    https://github.com/dieter-wilhelm/ansys-mode/releases
 
-    An alternative archive is at Google Drive:
+    An alternative releases archive is hosted at Google Drive:
 
     https://drive.google.com/?tab=mo&authuser=0#folders/0Bxnk08BGWfexUThqbWxLX1NyeTg
 
@@ -213,7 +209,7 @@
     Michaelk@vipac.com.au,
     sparr@mfkrs1.mw.tu-dresden.de,
     eyk.heinemann@continental-corporation.com,
-    jens.2.missung@continental-corporation.com,
+    jens.2.missun@continental-corporation.com,
     joerg.menke@continental-corporation.com,
     marius.tarnovetchi@continental-corporation.com,
     razvan.ionel.curtean@continental-corporation.com,
